--- a/group 3/Login.html
+++ b/group 3/Login.html
@@ -10,16 +10,19 @@
      <body class="log">
         <img class="cover" src="images\david-lezcano-NfZiOJzZgcg-unsplash.jpg" alt="image1">
         <div class="container">
-            <form>
+            <form action="Login.php" method="post" onsubmit="return validate2Form(event)" novalidate>
                 <h1>Login</h1>
                 <div class="input-box">
-                <input type="email"  placeholder="Email">
-                <input type="password" placeholder="Password" >
+                <input type="email"  placeholder="Email" id="Email" name="Email">
+                <span class="error" id="EmailError"></span>
+                <input type="password" placeholder="Password" id="Password" name="Password" >
+                <span class="error" id="PasswordError"></span>
             </div><div class="Remember"><label  for="check">Remember me</label>
-                <input class="check" type="checkbox">
+                <input class="check" type="checkbox" name="check">
                 <a href="Reset-Password.html">forgot password</a></div>
                 <input type="submit" class="btn" value="Login" >
                <p>Don't have an account? <a href="Sign-up.html">Sign-Up</a> </p>
         </div>
+        <script src="main.js"></script>
      </body>
 </html> 
