--- a/group 3/Sign-up.html
+++ b/group 3/Sign-up.html
@@ -10,37 +10,47 @@
 <body class="log">
     <img class="cover" src="images\david-lezcano-NfZiOJzZgcg-unsplash.jpg" alt="image1">
     <div class="container2">
-    <form>
+    <form action="Signup.php" method="post" onsubmit="return validateForm(event)" novalidate>
+
         <h1>Register</h1>
         <div class="input-box2">
-    <input type="text" placeholder="First-name" id="First-name" name="First-name">
-    <input type="text" placeholder="Last-name" id="Last-name" name="Last-name"> 
-    <input type="Email" placeholder="Email" id="Email" name="Email">  
-    <input type="password" placeholder="Password" id="Password" name="Password">
-    <input type="password" placeholder="Confirm-Password" id="Password" name="Password">
-    <input type="tel" placeholder="Enter Phone-Number" id="Phone-Number" name="Phone-Number">
-</div>  
-<div class="country">
-    <label for="select">Country of origin</label>
-    <select  name="country" id="country">
-    <option value="Malawi" > Malawi </option>
-    <option value="India" > India </option>
-    <option value="Tanzania" >Tanzania </option>
-    <option value="Zambia" > Zambia </option>
-    <option value="Brazil" > Brazia </option>
-    <option value="Japan" > Japan </option>
-    <option value="China" > China </option>
-    <option value="Kenya" > Kenya </option>
-    <option value="United States Of America" > United States Of America</option>
-    <option value="South-Africa">South-Africa</option> <select>   
-    </div>                  
+            <input type="text" placeholder="First-name" id="FirstName" name="firstname">
+            <span class="error" id="FirstNameError"></span>
+            <input type="text" placeholder="Last-name" id="LastName" name="lastName"> 
+            <span class="error" id="LastNameError"></span>
+            <input type="Email" placeholder="Email" id="Email" name="Email">  
+            <span class="error" id="EmailError"></span>
+            <input type="password" placeholder="Password" id="Password" name="Password">
+            <span class="error" id="PasswordError"></span>
+            <input type="password" placeholder="Confirm-Password" id="ConfirmPassword" name="Confirm-Password">
+            <span class="error" id="ConfirmPasswordError"></span>
+            <input type="tel" placeholder="Enter Phone-Number" id="PhoneNumber" name="PhoneNumber">
+            <span class="error" id="PhoneNumberError"></span>
+        </div>  
+        <div class="country">
+            <label for="select">Country of origin</label>
+            <select name="country" id="country">
+                <option value="Malawi">Malawi</option>
+                <option value="India">India</option>
+                <option value="Tanzania">Tanzania</option>
+                <option value="Zambia">Zambia</option>
+                <option value="Brazil">Brazia</option>
+                <option value="Japan">Japan</option>
+                <option value="China">China</option>
+                <option value="Kenya">Kenya</option>
+                <option value="United States Of America">United States Of America</option>
+                <option value="South-Africa">South-Africa</option>
+            </select>   
+    
+        </div>                  
 
-<input type="checkbox" id="check" name="check">
-<label for="check" > I have accepted the<a href="Terms and Conditions.html"> <b> Terms and conditions</b></a></label>
+        <input type="checkbox" id="check" name="check">
+        <label for="check">I have accepted the<a href="Terms and Conditions.html"><b>Terms and conditions</b></a></label><br>
+        <span class="error" id="checkError"></span>
 
-<div><input type="submit" value="Sign-Up" class="btn2"></div>
-<div><P>Alredy have an account?<a href="Login.html" ><b>Login</b></a></P></div>
-</div>
-</form>
+        <div><input type="submit" value="Sign-Up" class="btn2"></div>
+        <div><p>Already have an account?<a href="Login.html"><b>Login</b></a></p></div>
+    </form>
+    <script src="main.js"></script>
 </body>
 </html>
