added a map and forgotpassword

--- a/group 3/ContactUs.html
+++ b/group 3/ContactUs.html
@@ -58,12 +58,14 @@
             </ul>
         </nav>
         <section class="contact">
+            <form action="ContactUs.php" method="post">
             <div class="message">
-                <input type="email" placeholder="Email">
-                <input type="text" placeholder="Name">
-                <input type="text" placeholder="Message">
+                <input type="email" placeholder="Email" name="email">
+                <input type="text" placeholder="Name" name="UserName">
+                <input type="text" placeholder="Message" name="message">
                 <button>Send Message</button>
             </div>
+        </form>
             <div class="News">
                 <h6>Our Newsletters</h6>
                 <p>hpiodfjapoefjapohfaihfpiahfdowadp9ahsfi9a<br>jposfhaspiofhpioajfdpoawjfpiashiofhasiofais</p>
@@ -76,9 +78,10 @@
                   <p>hpiodfjapoefjapohfaihfpiahfdowadp9ahsfi9a<br>jposfhaspiofhpioajfdpoawjfpiashiofhasiofais</p></div>
             <div><box-icon name='phone'></box-icon><h6> (+265)885620896 </h6> 
                   <p>hpiodfjapoefjapohfaihfpiahfdowadp9ahsfi9a<br>jposfhaspiofhpioajfdpoawjfpiashiofhasiofais</p></div>
-            <div>><box-icon name='map'></box-icon><h6>Northen-Region, Rumphi, Malawi </h6> 
+            <div><box-icon name='map'></box-icon><h6>Northen-Region, Rumphi, Malawi </h6> 
                   <p>hpiodfjapoefjapohfaihfpiahfdowadp9ahsfi9a<br>jposfhaspiofhpioajfdpoawjfpiashiofhasiofais</p></div>
         </section>
+        <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3921.562152234342!2d34.104948073841925!3d-10.613365416868602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19025ef8944cb157%3A0x5aea743d536d4c21!2sLivingstonia%20University%2C%20Malawi!5e0!3m2!1sen!2smw!4v1724735519828!5m2!1sen!2smw" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         <section>
             
         </section>
