--- a/group 3/index.html
+++ b/group 3/index.html
@@ -165,9 +165,9 @@
                      <li><box-icon name='whatsapp' type='logo' ></box-icon></li></span> 
                     </span>
                     </ul></div>
-                    <span>   <p class="rights"><box-icon name='copyright' ></box-icon>2024 E-SHOP. All Rights Reserved</p></span>
           </footer>
-       
-
+          <div class="rights">          <span>   <p ><box-icon name='copyright' ></box-icon>2024 E-SHOP. All Rights Reserved</p></span>
+          </div>
+  <script src="cart.js"></script>
     </body>
 </html>
