--- a/group 3/index.html
+++ b/group 3/index.html
@@ -72,56 +72,56 @@
            ,<span> <P >Our Trending Winter wear and Gadgets</P></span>
             <div class="ar">
                 <div class="items">
-                   <img src="images/pascal-m-4PchFKrUw84-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
+                   <img class="ProductImg" src="images/pascal-m-4PchFKrUw84-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
                    <p class="description">Gaming Mouse</p>
                 <p class="Price-description">Price:<span class="Price">MWK 10,000</span></p>
                 <label for="quantity" id="quantity-label">Quantity</label><input id="quantity" type="number">
                 <input class="btn3"   type="button" value="Add To Cart">
                 </div>
                 <div class="items">
-                    <img src="images/domino-164_6wVEHfI-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
+                    <img class="ProductImg"  src="images/domino-164_6wVEHfI-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
                     <p class="description">Nike Running Shoes</p>
                  <p class="Price-description">Price:<span class="Price">MWK 40,000</span></p>
                  <label for="quantity" id="quantity-label">Quantity</label><input id="quantity" type="number">
                  <input class="btn3"   type="button" value="Add To Cart">
                  </div>
-                <div class="items">
-                    <img src="images/paolo-giubilato-ZwKCWVFdrcs-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
+                <div class="items" >
+                    <img class="ProductImg" src="images/paolo-giubilato-ZwKCWVFdrcs-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
                     <p class="description">IPhone 12</p>
                  <p class="Price-description">Price:<span class="Price">MWK 100,000</span></p>
                  <label for="quantity" id="quantity-label">Quantity</label><input id="quantity" type="number">
                  <input class="btn3"   type="button" value="Add To Cart">
                  </div>
                  <div class="items">
-                    <img src="images/anomaly-WWesmHEgXDs-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
+                    <img class="ProductImg" src="images/anomaly-WWesmHEgXDs-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
                     <p class="description">T-shirts</p>
                  <p class="Price-description">Price:<span class="Price">MWK 12,000</span></p>
-                 <label for="quantity" id="quantity-label">Quantity</label><input id="quantity" type="number">
+                 <label for="quantity" id="quantity-label">Quantity</label><input id="quantity" class="quantity" type="number">
                  <input class="btn3"   type="button" value="Add To Cart">
                  </div>
                  <div class="items">
-                    <img src="images/rishabh-malhotra-83ypHTv6J2M-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
+                    <img class="ProductImg" src="images/rishabh-malhotra-83ypHTv6J2M-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
                     <p class="description">Iphone 13</p>
                  <p class="Price-description">Price:<span class="Price">MWK 190,000</span></p>
                  <label for="quantity" id="quantity-label">Quantity</label><input id="quantity" type="number">
                  <input class="btn3"   type="button" value="Add To Cart">
                  </div>
                  <div class="items">
-                    <img src="images/sabrianna-Y_bxfTa_iUA-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
+                    <img class="ProductImg" src="images/sabrianna-Y_bxfTa_iUA-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
                     <p class="description">Diamond Ring</p>
                  <p class="Price-description">Price:<span class="Price">MWK 250,000</span></p>
                  <label for="quantity" id="quantity-label">Quantity</label><input id="quantity" type="number">
                  <input class="btn3"   type="button" value="Add To Cart">
                  </div>
                  <div class="items">
-                    <img src="images/tomasz-gawlowski-YDZPdqv3FcA-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
+                    <img class="ProductImg" src="images/tomasz-gawlowski-YDZPdqv3FcA-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
                     <p class="description">Head phones</p>
                  <p class="Price-description">Price:<span class="Price">MWK 35,000</span></p>
                 
                  <input class="btn3"   type="button" value="Add To Cart">
                  </div>
                  <div class="items">
-                    <img src="images/paul-volkmer-updW-QUccFE-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
+                    <img class="ProductImg" src="images/paul-volkmer-updW-QUccFE-unsplash.jpg" alt="pascal-m-4PchFKrUw84-unsplash">
                     <p class="description">Jordan 1</p>
                  <p class="Price-description">Price:<span class="Price">MWK 75,000</span></p>
                  <label for="quantity" id="quantity-label">Quantity</label><input id="quantity" type="number">
@@ -168,6 +168,37 @@
           </footer>
           <div class="rights">          <span>   <p ><box-icon name='copyright' ></box-icon>2024 E-SHOP. All Rights Reserved</p></span>
           </div>
-  <script src="cart.js"></script>
+  <script >document.addEventListener("DOMContentLoaded",() =>{
+    const productDetails = [];
+  
+ function addproductdetails(event){
+    const product = event.target.closest(".items");
+     if(product)
+{
+        const name = product.querySelector(".description").textContent;
+        const price = product.querySelector(".Price").textContent;
+        const image = product.querySelector(".ProductImg").src;
+        const Details = {
+            Image: image,
+            Name: name,
+            Price: price
+        };
+      const existingIndex = productDetails.findIndex(Item => Item.Name === Details.Name);
+      if(existingIndex !==-1){
+        productDetails.splice(existingIndex, 1);
+      }
+        productDetails.push(Details);
+        localStorage.setItem('SelectedProducts',JSON.stringify(productDetails));
+        console.log(productDetails);
+      } 
+} 
+const AddToCarts = document.querySelectorAll(".btn3");
+AddToCarts.forEach(AddToCart =>{
+    AddToCart.addEventListener("click",addproductdetails);
+});
+});
+
+
+</script>
     </body>
 </html>
