logout and some validation added

--- a/group 3/Confirm-Password.html
+++ b/group 3/Confirm-Password.html
@@ -9,16 +9,40 @@
     <title>Reset Password</title>
 </head>
 <body class="log">
-    <img class="cover" src="images\david-lezcano-NfZiOJzZgcg-unsplash.jpg" alt="image1">
+    <img class="cover" src="images/david-lezcano-NfZiOJzZgcg-unsplash.jpg" alt="image1">
     <div class="container3">
-        <form action="Confirm-Password.php" method="post">
+        <form action="Confirm-Password.php" method="post" onsubmit="return validateForm3()" novalidate>
             <div class="input-box3">
                 <h1>Confirm Password</h1>
-                <input type="Password" name="Password" placeholder="Enter New Password">
-                <input type="Password" name="Confirm-Password" placeholder="Confirm New Password">
+                <input type="password" id="Password" name="Password" placeholder="Enter New Password">
+                <span class="error" id="PasswordError"></span>
+                <input type="password" id="Confirm-Password" name="Confirm-Password" placeholder="Confirm New Password">
+                <span class="error" id="ConfirmPasswordError"></span>
             </div>
-            <input type="submit" class="btn3" value="Change Password">
+            <button class="btn3" type="submit">Change Password</button>
         </form>
     </div>
+
+    <script>
+        function validateForm3() {
+            const password = document.getElementById('Password').value;
+            const confirmPassword = document.getElementById('Confirm-Password').value;
+            let valid = true;
+            document.getElementById('PasswordError').textContent = '';
+            document.getElementById('ConfirmPasswordError').textContent = '';
+            if (password === '') {
+                document.getElementById('PasswordError').textContent = 'Password is required.';
+                valid = false;
+            }
+            if (confirmPassword === '') {
+                document.getElementById('ConfirmPasswordError').textContent = 'Please confirm your password.';
+                valid = false;
+            } else if (password !== confirmPassword) {
+                document.getElementById('ConfirmPasswordError').textContent = 'Passwords do not match.';
+                valid = false;
+            }
+            return valid;
+        }
+    </script>
 </body>
 </html>
