--- a/group 3/ContactUs.html
+++ b/group 3/ContactUs.html
@@ -19,7 +19,7 @@
                     <a href="index.html" class="active"><i><box-icon name='home-alt'></box-icon></i>Home</a>
                 </li>
                 <li> <a href="shop.html"><box-icon type='solid' name='shopping-bags'></box-icon>Shop</a> </li>
-                <li>  <a href="cart.html"> <i><box-icon name='cart' ></box-icon></i>Cart</a> </li>
+                <li>  <a href="cart.php"> <i><box-icon name='cart' ></box-icon></i>Cart</a> </li>
                 <li> <a href="ContactUs.html"> Contact Us </a></li>
             
             
