--- a/group 3/Reset-Password.html
+++ b/group 3/Reset-Password.html
@@ -11,14 +11,32 @@
 <body class="log">
     <img class="cover" src="images\david-lezcano-NfZiOJzZgcg-unsplash.jpg" alt="image1">
     <div class="container3">
-        <form action="Reset-Password.php" method="post">
+        <form action="Reset-Password.php" method="post" onsubmit="return validateForm4()" novalidate>
             <div class="input-box3">
                 <h1>Re-set Password</h1>
                 <p id="fgt">Enter your email to receive a new password</p>
-                <input type="email" name="email" placeholder="Email" required>
+                <input type="email" name="email" placeholder="Email">
+                <span class="error" id="EmailError"></span>
             </div>
-            <input type="submit" class="btn3" value="Submit">
+            <button class="btn3" type="submit">Submit</button>
         </form>
     </div>
+    <script>function validateForm4(event) {
+        event.preventDefault();
+        let emailRegex = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/;
+           let valid = true;
+        const email = document.getElementById('Email');
+        const emailError = document.getElementById('EmailError');
+        if (!email.value.trim()) {
+            emailError.textContent = 'Email is required';
+            valid = false;
+        } else if (!emailRegex.test(email.value)) {
+            emailError.textContent = 'Invalid email format example@mail.com';
+            valid = false;
+        } else {
+            emailError.textContent = '';
+        }
+         return valid; 
+    }</script>
 </body>
 </html>
