--- a/group 3/index.html
+++ b/group 3/index.html
@@ -19,7 +19,7 @@
                     <a href="index.html" class="active"><i><box-icon name='home-alt'></box-icon></i>Home</a>
                 </li>
                 <li> <a href="shop.html"><box-icon type='solid' name='shopping-bags'></box-icon>Shop</a> </li>
-                <li>  <a href="cart.html"> <i><box-icon name='cart' ></box-icon></i>Cart</a> </li>
+                <li>  <a href="cart.php"> <i><box-icon name='cart' ></box-icon></i>Cart</a> </li>
                 <li> <a href="ContactUs.html"> Contact Us </a></li>
             
             
@@ -51,7 +51,11 @@
                             <a href="#">FAQs</a>
                         </li>
                         <li>
-                            <a href="#">Ts and Cs</a>
+                            <a href="Ts&Cs.html">Ts and Cs</a>
+                        </li>
+                        <li>
+                            <a href="Logout.php">Logout</a>
+
                         </li>
                     </ul>
                 </nav>
@@ -65,7 +69,7 @@
             </div>
             <div class="text">
                 <h3>E-SHOP</h3>
-                <P>Welcome To Our E-Shop with variety of options to buy   <button class="btn01"><a href="shop.html"></a>Shop now</button> </P> 
+                <P>Welcome To Our E-Shop with variety of options to buy   <button class="btn01"><a href="shop.html" >.</a>Shop now</button> </P> 
             </section>
            <section class="featured-products">
             <h5>FEATURED PRODUCTS</h5>
