--- a/group 3/Terms and Conditions.html
+++ b/group 3/Terms and Conditions.html
@@ -16,11 +16,11 @@
                 <p> <B>E-SHOP</B></p>
                </li>
                 <li>
-                    <a href="index.html" class="active"><i><box-icon name='home-alt'></box-icon></i>Home</a>
+                    <a href="index.php" class="active"><i><box-icon name='home-alt'></box-icon></i>Home</a>
                 </li>
-                <li> <a href="shop.html"><box-icon type='solid' name='shopping-bags'></box-icon>Shop</a> </li>
-                <li>  <a href="#"> <i><box-icon name='cart' ></box-icon></i> Cart</a> </li>
-                <li> <a href="#"> Contact Us </a></li>
+                <li> <a href="shop.php"><box-icon type='solid' name='shopping-bags'></box-icon>Shop</a> </li>
+                <li>  <a href="cart.php"> <i><box-icon name='cart' ></box-icon></i> Cart</a> </li>
+                <li> <a href="Contact.php"> Contact Us </a></li>
             
             
                 <div class="srch-bx"> <li> <input type="search" placeholder="search" class="srh">
